--- a/Assign2.ipynb
+++ b/Assign2.ipynb
@@ -166,7 +166,7 @@
         "  def say_hello(self):\n",
         "    print(f'Greetins from {self.name}')\n",
         "  def is_adult(self):\n",
-        "    if self.__age>18:\n",
+        "    if self.__age>=18:\n",
         "     return True\n",
         "    else:\n",
         "      return False\n",
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "E1wQehi4wtWr"
       },
-      "execution_count": 39,
+      "execution_count": 44,
       "outputs": []
     },
     {
